[package]
name = "zapf"
version = "0.0.0"
edition = "2018"
description = "Client for the PILS PLC specification"
repository = "https://github.com/birkenfeld/zapf-rs"
license = "GPL-2.0+"

[dependencies]
anyhow = "1.0.45"
itertools = "0.10.1"
log = "0.4.14"
modbus = "1.0.4"
once_cell = "1.8.0"
regex = "1.5.4"
tango-client = "0.4.1"
thiserror = "1.0.30"
zerocopy = "0.6.1"

[dev-dependencies]
env_logger = "0.9"
